Added command line to start ml_flask_demo.py from jupyter notebook

--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -287,6 +287,15 @@
    ],
    "source": [
     "print(classification_report(y_test, my_random_forest.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python ml_flask_demo.py"
    ]
   },
   {
