--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Supporting Libraries\n",
     "from sklearn import datasets\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -27,216 +28,10 @@
    },
    "outputs": [],
    "source": [
-    "#Import the iris dataset and split between variables and target variable\n",
+    "# Load iris dataset\n",
     "iris = datasets.load_iris()\n",
     "X = iris.data\n",
     "y = iris.target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['setosa' 'versicolor' 'virginica']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(iris['target_names'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[5.1 3.5 1.4 0.2]\n",
-      " [4.9 3.  1.4 0.2]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]\n",
-      " [5.4 3.9 1.7 0.4]\n",
-      " [4.6 3.4 1.4 0.3]\n",
-      " [5.  3.4 1.5 0.2]\n",
-      " [4.4 2.9 1.4 0.2]\n",
-      " [4.9 3.1 1.5 0.1]\n",
-      " [5.4 3.7 1.5 0.2]\n",
-      " [4.8 3.4 1.6 0.2]\n",
-      " [4.8 3.  1.4 0.1]\n",
-      " [4.3 3.  1.1 0.1]\n",
-      " [5.8 4.  1.2 0.2]\n",
-      " [5.7 4.4 1.5 0.4]\n",
-      " [5.4 3.9 1.3 0.4]\n",
-      " [5.1 3.5 1.4 0.3]\n",
-      " [5.7 3.8 1.7 0.3]\n",
-      " [5.1 3.8 1.5 0.3]\n",
-      " [5.4 3.4 1.7 0.2]\n",
-      " [5.1 3.7 1.5 0.4]\n",
-      " [4.6 3.6 1.  0.2]\n",
-      " [5.1 3.3 1.7 0.5]\n",
-      " [4.8 3.4 1.9 0.2]\n",
-      " [5.  3.  1.6 0.2]\n",
-      " [5.  3.4 1.6 0.4]\n",
-      " [5.2 3.5 1.5 0.2]\n",
-      " [5.2 3.4 1.4 0.2]\n",
-      " [4.7 3.2 1.6 0.2]\n",
-      " [4.8 3.1 1.6 0.2]\n",
-      " [5.4 3.4 1.5 0.4]\n",
-      " [5.2 4.1 1.5 0.1]\n",
-      " [5.5 4.2 1.4 0.2]\n",
-      " [4.9 3.1 1.5 0.2]\n",
-      " [5.  3.2 1.2 0.2]\n",
-      " [5.5 3.5 1.3 0.2]\n",
-      " [4.9 3.6 1.4 0.1]\n",
-      " [4.4 3.  1.3 0.2]\n",
-      " [5.1 3.4 1.5 0.2]\n",
-      " [5.  3.5 1.3 0.3]\n",
-      " [4.5 2.3 1.3 0.3]\n",
-      " [4.4 3.2 1.3 0.2]\n",
-      " [5.  3.5 1.6 0.6]\n",
-      " [5.1 3.8 1.9 0.4]\n",
-      " [4.8 3.  1.4 0.3]\n",
-      " [5.1 3.8 1.6 0.2]\n",
-      " [4.6 3.2 1.4 0.2]\n",
-      " [5.3 3.7 1.5 0.2]\n",
-      " [5.  3.3 1.4 0.2]\n",
-      " [7.  3.2 4.7 1.4]\n",
-      " [6.4 3.2 4.5 1.5]\n",
-      " [6.9 3.1 4.9 1.5]\n",
-      " [5.5 2.3 4.  1.3]\n",
-      " [6.5 2.8 4.6 1.5]\n",
-      " [5.7 2.8 4.5 1.3]\n",
-      " [6.3 3.3 4.7 1.6]\n",
-      " [4.9 2.4 3.3 1. ]\n",
-      " [6.6 2.9 4.6 1.3]\n",
-      " [5.2 2.7 3.9 1.4]\n",
-      " [5.  2.  3.5 1. ]\n",
-      " [5.9 3.  4.2 1.5]\n",
-      " [6.  2.2 4.  1. ]\n",
-      " [6.1 2.9 4.7 1.4]\n",
-      " [5.6 2.9 3.6 1.3]\n",
-      " [6.7 3.1 4.4 1.4]\n",
-      " [5.6 3.  4.5 1.5]\n",
-      " [5.8 2.7 4.1 1. ]\n",
-      " [6.2 2.2 4.5 1.5]\n",
-      " [5.6 2.5 3.9 1.1]\n",
-      " [5.9 3.2 4.8 1.8]\n",
-      " [6.1 2.8 4.  1.3]\n",
-      " [6.3 2.5 4.9 1.5]\n",
-      " [6.1 2.8 4.7 1.2]\n",
-      " [6.4 2.9 4.3 1.3]\n",
-      " [6.6 3.  4.4 1.4]\n",
-      " [6.8 2.8 4.8 1.4]\n",
-      " [6.7 3.  5.  1.7]\n",
-      " [6.  2.9 4.5 1.5]\n",
-      " [5.7 2.6 3.5 1. ]\n",
-      " [5.5 2.4 3.8 1.1]\n",
-      " [5.5 2.4 3.7 1. ]\n",
-      " [5.8 2.7 3.9 1.2]\n",
-      " [6.  2.7 5.1 1.6]\n",
-      " [5.4 3.  4.5 1.5]\n",
-      " [6.  3.4 4.5 1.6]\n",
-      " [6.7 3.1 4.7 1.5]\n",
-      " [6.3 2.3 4.4 1.3]\n",
-      " [5.6 3.  4.1 1.3]\n",
-      " [5.5 2.5 4.  1.3]\n",
-      " [5.5 2.6 4.4 1.2]\n",
-      " [6.1 3.  4.6 1.4]\n",
-      " [5.8 2.6 4.  1.2]\n",
-      " [5.  2.3 3.3 1. ]\n",
-      " [5.6 2.7 4.2 1.3]\n",
-      " [5.7 3.  4.2 1.2]\n",
-      " [5.7 2.9 4.2 1.3]\n",
-      " [6.2 2.9 4.3 1.3]\n",
-      " [5.1 2.5 3.  1.1]\n",
-      " [5.7 2.8 4.1 1.3]\n",
-      " [6.3 3.3 6.  2.5]\n",
-      " [5.8 2.7 5.1 1.9]\n",
-      " [7.1 3.  5.9 2.1]\n",
-      " [6.3 2.9 5.6 1.8]\n",
-      " [6.5 3.  5.8 2.2]\n",
-      " [7.6 3.  6.6 2.1]\n",
-      " [4.9 2.5 4.5 1.7]\n",
-      " [7.3 2.9 6.3 1.8]\n",
-      " [6.7 2.5 5.8 1.8]\n",
-      " [7.2 3.6 6.1 2.5]\n",
-      " [6.5 3.2 5.1 2. ]\n",
-      " [6.4 2.7 5.3 1.9]\n",
-      " [6.8 3.  5.5 2.1]\n",
-      " [5.7 2.5 5.  2. ]\n",
-      " [5.8 2.8 5.1 2.4]\n",
-      " [6.4 3.2 5.3 2.3]\n",
-      " [6.5 3.  5.5 1.8]\n",
-      " [7.7 3.8 6.7 2.2]\n",
-      " [7.7 2.6 6.9 2.3]\n",
-      " [6.  2.2 5.  1.5]\n",
-      " [6.9 3.2 5.7 2.3]\n",
-      " [5.6 2.8 4.9 2. ]\n",
-      " [7.7 2.8 6.7 2. ]\n",
-      " [6.3 2.7 4.9 1.8]\n",
-      " [6.7 3.3 5.7 2.1]\n",
-      " [7.2 3.2 6.  1.8]\n",
-      " [6.2 2.8 4.8 1.8]\n",
-      " [6.1 3.  4.9 1.8]\n",
-      " [6.4 2.8 5.6 2.1]\n",
-      " [7.2 3.  5.8 1.6]\n",
-      " [7.4 2.8 6.1 1.9]\n",
-      " [7.9 3.8 6.4 2. ]\n",
-      " [6.4 2.8 5.6 2.2]\n",
-      " [6.3 2.8 5.1 1.5]\n",
-      " [6.1 2.6 5.6 1.4]\n",
-      " [7.7 3.  6.1 2.3]\n",
-      " [6.3 3.4 5.6 2.4]\n",
-      " [6.4 3.1 5.5 1.8]\n",
-      " [6.  3.  4.8 1.8]\n",
-      " [6.9 3.1 5.4 2.1]\n",
-      " [6.7 3.1 5.6 2.4]\n",
-      " [6.9 3.1 5.1 2.3]\n",
-      " [5.8 2.7 5.1 1.9]\n",
-      " [6.8 3.2 5.9 2.3]\n",
-      " [6.7 3.3 5.7 2.5]\n",
-      " [6.7 3.  5.2 2.3]\n",
-      " [6.3 2.5 5.  1.9]\n",
-      " [6.5 3.  5.2 2. ]\n",
-      " [6.2 3.4 5.4 2.3]\n",
-      " [5.9 3.  5.1 1.8]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(iris.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(iris.target)"
    ]
   },
   {
@@ -317,16 +112,90 @@
     }
    ],
    "source": [
+    "# Print iris description \n",
     "print(iris.DESCR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+    "# Assign independent features \"data\" to X and dependent feature \"target\" to y\n",
+    "X = iris.data\n",
+    "y = iris.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['setosa' 'versicolor' 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print target names\n",
+    "print(iris['target_names'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print Iris array X-variables, indepedent features\n",
+    "print(iris.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(iris.data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print Iris array Y-variable, dependent feature\n",
+    "print(iris.target)"
    ]
   },
   {
@@ -335,12 +204,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfc = RandomForestClassifier(n_estimators = 100, n_jobs = 2)"
+    "# Perform train, test split with 70% X_train, X_test, y_train, y_test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate Random Forest Classifier with 100 n_estimators and 2 n_jobs\n",
+    "rfc = RandomForestClassifier(n_estimators = 100, n_jobs = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -357,48 +237,63 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Fit Random Forest Classifier\n",
     "rfc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.95\n",
+      "Accuracy = 0.98\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       0.94      0.94      0.94        16\n",
-      "           2       0.92      0.92      0.92        12\n",
+      "           0       1.00      1.00      1.00         9\n",
+      "           1       0.94      1.00      0.97        17\n",
+      "           2       1.00      0.95      0.97        19\n",
       "\n",
-      "   micro avg       0.95      0.95      0.95        38\n",
-      "   macro avg       0.95      0.95      0.95        38\n",
-      "weighted avg       0.95      0.95      0.95        38\n",
+      "   micro avg       0.98      0.98      0.98        45\n",
+      "   macro avg       0.98      0.98      0.98        45\n",
+      "weighted avg       0.98      0.98      0.98        45\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Print accuracy score\n",
+    "# Print classification report\n",
     "print(\"Accuracy = %0.2f\" % accuracy_score (y_test, rfc.predict(X_test)))\n",
     "print(classification_report(y_test, rfc.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate predicted values (y_pred)\n",
+    "y_pred = rfc.predict(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Serialization / Marshalling"
+    "## Model Serialization"
    ]
   },
   {
@@ -407,6 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pickle dump rfc model\n",
     "pickle.dump(rfc, open(\"iris_rfc.pkl\", \"wb\"))"
    ]
   },
@@ -416,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pickle load rfc model\n",
     "my_random_forest = pickle.load(open(\"iris_rfc.pkl\", 'rb'))"
    ]
   },
@@ -442,12 +339,13 @@
     }
    ],
    "source": [
+    "# View Random Forest\n",
     "my_random_forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -458,19 +356,27 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       0.94      0.94      0.94        16\n",
-      "           2       0.92      0.92      0.92        12\n",
+      "           0       1.00      1.00      1.00         9\n",
+      "           1       0.94      1.00      0.97        17\n",
+      "           2       1.00      0.95      0.97        19\n",
       "\n",
-      "   micro avg       0.95      0.95      0.95        38\n",
-      "   macro avg       0.95      0.95      0.95        38\n",
-      "weighted avg       0.95      0.95      0.95        38\n",
+      "   micro avg       0.98      0.98      0.98        45\n",
+      "   macro avg       0.98      0.98      0.98        45\n",
+      "weighted avg       0.98      0.98      0.98        45\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, my_random_forest.predict(X_test)))"
+    "# Print classification report again\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flask web dev endpoint!"
    ]
   },
   {
