--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -397,7 +397,7 @@
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
     "os.environ['NO_PROXY'] = '127.0.0.1'\n",
-    "url = \"http://127.0.0.1:9000/api\"\n",
+    "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "versicolor_data = json.dumps({'sl':5.24,'sw':3.0,'pl':3.75,'pw':1.1})\n",
     "r = requests.post(url, versicolor_data)\n",
     "print(r.json())"
@@ -419,7 +419,7 @@
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
     "os.environ['NO_PROXY'] = '127.0.0.1'\n",
-    "url = \"http://127.0.0.1:9000/api\"\n",
+    "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "setosa_data = json.dumps({'sl':5.11,'sw':3.4,'pl':1.6,'pw':0.3})\n",
     "r = requests.post(url, setosa_data)\n",
     "print(r.json())"
@@ -441,7 +441,7 @@
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
     "os.environ['NO_PROXY'] = '127.0.0.1'\n",
-    "url = \"http://127.0.0.1:9000/api\"\n",
+    "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "virginica_data = json.dumps({'sl':6.1,'sw':3.4,'pl':5.6,'pw':2.1})\n",
     "r = requests.post(url, virginica_data)\n",
     "print(r.json())"
