--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -29,9 +29,7 @@
    "outputs": [],
    "source": [
     "# Load iris dataset\n",
-    "iris = datasets.load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target"
+    "iris = datasets.load_iris()"
    ]
   },
   {
@@ -471,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
